# computational-optimal-transport

./: .gitignore  CLAUDE.md  main.tex  preamble.tex  pyproject.toml
chapters/: 01_introduction.tex  02_theoretical_foundations.tex  03_algorithmic_foundations.tex  04_entropic_regularization.tex  main.tex  preamble.tex
cuturi/: ERRATA.md
experiments/: .gitignore  README.md  pyproject.toml
experiments/examples/: 01_assignment.py  01_assignment_3x3.py  02_assignment_nonunique.py  02_monge.py  03_hungarian_vs_brute.py  03_kantorovich.py  04_benchmark_complexity.py  04_three_problems.py  05_assignment_nonunique.py  06_hungarian_vs_brute.py  07_benchmark_complexity.py
experiments/src/cot/: __init__.py
experiments/src/cot/assignment/: __init__.py  brute_force.py  definitions.py  hungarian.py
experiments/src/cot/core/: __init__.py  costs.py  histograms.py  scenario.py  types.py
experiments/src/cot/kantorovich/: __init__.py  definitions.py  linprog.py
experiments/src/cot/monge/: __init__.py  brute_force.py  definitions.py
experiments/src/cot/viz/: __init__.py  assignment_plot.py  config.py  sandpile_plot.py
experiments/vae_geodesic/: vae_geodesic.py
llm/: requirements.txt
seminar/: .latexmkrc  01_from_monge_to_sinkhorn.tex  ch00_math_preliminaries.tex  ch01_preliminaries.tex  ch02_ot_foundations.tex  ch03_algorithmic_foundations.tex  ch03_discrete_solving.tex  ch04_entropic_regularization.tex  ch04_wasserstein_geometry.tex  concept_map.md  main.tex  main_0519.tex  preamble.tex  s2.2-2.4_ot_foundations.tex
site/: .gitignore  README.md  algorithms.html  (+8 more)
(+65 files in other folders)
