[project]
name = "cot"
version = "0.1.0"
description = "Computational Optimal Transport — seminar の内容を Python で実装・数値検証するパッケージ"
readme = "README.md"
authors = [
    { name = "a1t2s2u2", email = "a.ejima@momiji-ai.com" }
]
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0",
    "scipy>=1.13",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.8"]

[dependency-groups]
dev = [
    "ruff>=0.6",
]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]
# N803, N806: 数学記法として C, X, Y, P, L, W 等の大文字を用いる (Cuturi 論文に準拠)
ignore = ["E501", "N803", "N806"]
